Bug 1394405 - Relax the assertion in CalculateDistanceToEllipticArc to deal with the floating point precision problem; r=nical

MozReview-Commit-ID: c0kgjG2zUg